Contrast fixes

--- a/src/bootstrap-customisations/_alerts.scss
+++ b/src/bootstrap-customisations/_alerts.scss
@@ -14,6 +14,10 @@
     &:not([class*="alert-"]) {
         background-color: $fhi-blue-grey-3;
     }
+
+    a {
+        color: currentColor;
+    }
 }
 
 .alert-dismissible .btn-close {
