--- a/src/bootstrap-customisations/_tables.scss
+++ b/src/bootstrap-customisations/_tables.scss
@@ -24,7 +24,7 @@
 
 
 th[aria-sort] {
-    color: $fhi-blue-grey-6;
+    color: $fhi-blue-grey-7;
     cursor: pointer;
     padding-right: $fhi-space-5;
     position: relative;
