--- a/src/bootstrap-customisations/_variables.scss
+++ b/src/bootstrap-customisations/_variables.scss
@@ -56,7 +56,7 @@ $theme-colors: (
 );
 
 $border-color: $fhi-grey-1;
-$disabled-color: $fhi-grey-2;
+$disabled-color: $fhi-grey-3;
 
 $enable-negative-margins: true;
 
@@ -188,7 +188,7 @@ $pagination-hover-bg:               $pagination-bg;
 $pagination-active-color:           $body-color;
 $pagination-active-bg:              $pagination-bg;
 
-$pagination-disabled-color:         $fhi-grey-2;
+$pagination-disabled-color:         $fhi-grey-3;
 
 
 // Toasts
