--- a/src/core/_core.variables.scss
+++ b/src/core/_core.variables.scss
@@ -136,12 +136,12 @@ $fhi-bg-color-6:  $fhi-blue-grey-1;
 $fhi-bg-color-7:  $fhi-blue-grey-2;
 $fhi-bg-color-8:  $fhi-blue-grey-1;
 
-$fhi-disabled-color: $fhi-grey-2;
+$fhi-disabled-color: $fhi-grey-3;
 $fhi-disabled-color-inverse: $fhi-grey-1;
 
 $fhi-text-ancillary:         $fhi-grey-3;
 $fhi-text-ancillary-inverse: $fhi-grey-1;
-$fhi-text-error-inverse:     $fhi-pink-dark-1;
+$fhi-text-error-inverse:     $fhi-pink-light-3;
 
 $fhi-main-menu-xs-color:        $fhi-white;
 $fhi-main-menu-xl-color:        $fhi-grey-4;
